--- a/web/static_site/index.html
+++ b/web/static_site/index.html
@@ -11,11 +11,7 @@
 
     <title>CS 205 Project</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" type="text/css">
-
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/flatly/bootstrap.css" type="text/css">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-3dkvEK0WLHRJ7/Csr0BZjAWxERc5WH7bdeUya2aXxdU= sha512-+L4yy6FRcDGbXJ9mPG8MT/3UCDzwR9gPeyFNMCtInsol++5m3bk2bXWKdZjvybmohrAsn3Ua5x8gfLnbE1YkOg==" crossorigin="anonymous">
 
@@ -39,6 +35,13 @@
             }
         });
     </script>
+
+    <style>
+    body {
+    padding: 70px;
+    position: relative;
+    }
+    </style>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
