--- a/web/static_site/index.html
+++ b/web/static_site/index.html
@@ -68,6 +68,10 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-left">
                     <li>
+                        <a href="#video">Video</a>
+                    </li>
+
+                    <li>
                         <a href="#motivation">Motivation</a>
                     </li>
 
@@ -100,6 +104,11 @@
         <!-- /.container-fluid -->
     </nav>
     <div class="container">
+
+    <section id="video">
+        <h1>Project Video</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VXXupQrVD8U" frameborder="0" allowfullscreen></iframe>
+    </section>
 
     <section id="motivation">
             <h1>Motivation</h1>
